--- a/client/addtask/addtask.html
+++ b/client/addtask/addtask.html
@@ -40,27 +40,27 @@
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." checked />
-                      <s>hello</s>
+                      <s>Create A Website</s>
                     </li>
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." checked />
-                      <s>helllo again</s>
+                      <s>Publish to Github</s>
                     </li>
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      again
+                      Download meteor
                     </li>
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      yes
+                      Update Website
                     </li>
                     <li class="list-group-item d-flex align-items-center border-0 mb-0 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      okat
+                      Delete Previous Website
                     </li>
                   </ul>
                 </div>
@@ -84,7 +84,7 @@
                     </li>
                   </ul>
                 </div> -->
-                
+
                 <!-- <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
                   <ul class="list-group mb-0">
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
