--- a/client/addtask/addtask.html
+++ b/client/addtask/addtask.html
@@ -9,10 +9,10 @@
   
               <form class="d-flex justify-content-center align-items-center mb-4">
                 <div class="form-outline flex-fill">
-                  <input type="text" id="form2" class="form-control" placeholder="Please Add A New Task"/>
+                  <input type="text" id="newtask" class="form-control" placeholder="Please Add A New Task"/>
                   
                 </div>
-                <button type="submit" class="btn btn-info ms-2 js-addnext">Add Task</button>
+                <button type="submit" class="btn btn-info ms-2 " id="js-add">Add Task</button>
               </form>
   
               <!-- Tabs navs -->
