--- a/client/main.html
+++ b/client/main.html
@@ -9,10 +9,11 @@
 
 <body>
 
-  <h1>Welcome to Your To do List!</h1>
+  
 
  <div class="container"> 
-
+    <h1 class="display-2">Welcome to Your To Do list!</h1>
+    
     {{> addtask}}
   
 </div> 
