--- a/client/addtask/addtask.html
+++ b/client/addtask/addtask.html
@@ -15,6 +15,16 @@
                 <button type="submit" class="btn btn-info ms-2 " id="js-add">Add Task</button>
               </form>
   
+              <div class="row">
+              <div class="col-xl-6 addTaskFrame-sides px-5 py-2 text-end">
+                <div class="privateTask inputTaskSize">
+                    <span>Private</span>
+                    <i class="fa-solid fa-check d-none"></i>
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </div>  
+                </div>
+
               <!-- Tabs navs -->
               <ul class="nav nav-tabs mb-4 pb-2" id="ex1" role="tablist">
                 <li class="nav-item" role="presentation">
