--- a/client/listTask/listTask.html
+++ b/client/listTask/listTask.html
@@ -6,8 +6,8 @@
                 <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded" style="background-color: #f4f6f7;">
                     <input class="form-check-input me-2" type="checkbox" value="" aria-label="..."  />
                   <span>{{task}}</span>
-                  <div class="taskDelete">
-                    <i class="fa-regular fa-trash-can js-trashthis"></i>
+                  <div class="taskDelete my-2">
+                    <i class="fa-regular fa-trash-can js-trashThis"></i>
                 </div>
                 </li>
                   
