--- a/client/listTask/listTask.html
+++ b/client/listTask/listTask.html
@@ -3,8 +3,8 @@
         <div class="col-xl-6 listTextSize">
             <ul class="list-group mb-0">
                 {{#each theTasks}}
-                <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded" style="background-color: #f4f6f7;">
-                    <input class="form-check-input me-2" type="checkbox" value="" aria-label="..."  />
+                <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded {{#if comp}}colourbox{{/if}}" style="background-color: #f4f6f7;">
+                    <input class="form-check-input me-2 js-tick" type="checkbox" value="" aria-label="..."  />
                   <span>{{task}}</span>
                   <div class="taskDelete my-2">
                     <i class="fa-regular fa-trash-can js-trashThis"></i>
